syntax = "proto3";

package api.calendars.calendar.v1alpha1;

import "api/types/access_state.proto";
import "api/types/permission_level.proto";
import "api/types/visibility_level.proto";
import "google/api/annotations.proto";
import "google/api/client.proto";
import "google/api/field_behavior.proto";
import "google/api/resource.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/timestamp.proto";
import "google/type/latlng.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  security_definitions: {
    security: {
      key: "BearerAuth"
      value: {
        type: TYPE_API_KEY
        in: IN_HEADER
        name: "Authorization"
        description: "Bearer token for authentication"
      }
    }
  }
  security: {
    security_requirement: {
      key: "BearerAuth"
      value: {}
    }
  }
};

// the event service
service EventService {}

// the main user event
message Event {
  option (google.api.resource) = {
    type: "api.events.event.v1alpha1/Event"
    pattern: "calendars/{calendar}/events/{event}"
    pattern: "users/{user}/calendars/{calendar}/events/{event}"
    pattern: "circles/{circle}/calendars/{calendar}/events/{event}"
    plural: "events"
    singular: "event"
  };

  // the name of the event
  string name = 1 [(google.api.field_behavior) = IDENTIFIER];

  // the title of the event
  string title = 2 [(google.api.field_behavior) = REQUIRED];

  // the start time of the event
  google.protobuf.Timestamp start_time = 3 [(google.api.field_behavior) = REQUIRED];

  // the end time of the event
  google.protobuf.Timestamp end_time = 4 [(google.api.field_behavior) = REQUIRED];

  // the description of the event
  string description = 5 [(google.api.field_behavior) = OPTIONAL];

  // the location of the event
  google.type.LatLng location = 6 [(google.api.field_behavior) = OPTIONAL];

  // the state of the event
  State state = 7 [(google.api.field_behavior) = OUTPUT_ONLY];

  // the class of the event
  Class event_class = 8 [(google.api.field_behavior) = REQUIRED];

  // the url of the event
  string uri = 9 [(google.api.field_behavior) = OPTIONAL];

  // the recurrence rule of the event
  string recurrence_rule = 10 [(google.api.field_behavior) = OPTIONAL];

  // the recurrence time of the event
  google.protobuf.Timestamp recurrence_time = 11 [(google.api.field_behavior) = OPTIONAL];

  // the excluded dates of the event
  repeated google.protobuf.Timestamp excluded_times = 12 [(google.api.field_behavior) = OPTIONAL];

  // the additional dates of the event
  repeated google.protobuf.Timestamp additional_times = 13 [(google.api.field_behavior) = OPTIONAL];

  // the parent event id of the event
  int64 recurring_event_id = 14 [(google.api.field_behavior) = OPTIONAL];

  // the alarms of the event
  repeated Alarm alarms = 15 [(google.api.field_behavior) = OPTIONAL];

  // the class of the event
  enum Class {
    // the class is unspecified
    CLASS_UNSPECIFIED = 0;
    // the class is public
    CLASS_PUBLIC = 1;
    // the class is private
    CLASS_PRIVATE = 2;
    // the class is confidential
    CLASS_CONFIDENTIAL = 3;
  }

  // the state of the event
  enum State {
    // the state is unspecified
    STATE_UNSPECIFIED = 0;
    // the state is confirmed
    STATE_CONFIRMED = 1;
    // the state is tentative
    STATE_TENTATIVE = 2;
    // the state is cancelled
    STATE_CANCELLED = 3;
  }

  // the alarms of the event
  message Alarm {
    // the alarm id
    string alarm_id = 1 [(google.api.field_behavior) = REQUIRED];

    // the trigger of the alarm
    Trigger trigger = 2 [(google.api.field_behavior) = REQUIRED];

    // the trigger of the alarm
    message Trigger {
      oneof trigger {
        // the duration of the alarm
        google.protobuf.Duration duration = 1;

        // the date time of the alarm
        google.protobuf.Timestamp date_time = 2;
      }
    }
  }
}
